k8s/services/factorio/app/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-all
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-factorio
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "34197"
              protocol: UDP
            - port: "27015"
              protocol: TCP
